# python_netonix_api

./: README.md  netonix_api.py  pyproject.toml  python_netonix_api.toml  setup.py  test_netonix_api.py
example/: base_config.py  find_aps.py  netonix_command.py
