[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_netonix_api"
version = "0.2.0"
authors = [
    { name="shrank", email="info@murxs.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
description = "Python class to access Netonix WISP Switch WebAPI"
requires-python = ">=3.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
keywords = ["network", "automation", "netonix"]
dependencies = [
    "requests"
]

[project.optional-dependencies]
dev = ["deepdiff", "getpass", "urllib3"]

[project.urls]
Homepage = "https://github.com/shrank/python_netonix_api"
